@@ -85,7 +85,7 @@ public:
 
   // Simulation.
 public:
-  void nitrification (const double M, const double C, 
+  void nitrification (const double M, const double C, const double Theta,
                       const double h, const double T,
                       double& NH4, double& N2O, double& NO3) const;
  
