@@ -114,7 +114,7 @@ public:
 public:
   void output (Log&) const;
   void nitrification (const size_t i,
-                      const double M, const double C, 
+                      const double M, const double C, const double Theta,
                       const double h, const double T,
                       double& NH4, double& N2O, double& NO3) const;
 
